<resources>
    <string name="app_name">Vario Console</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_settings">Settings</string>
    <string name="action_connect">Connect</string>
    <string name="action_calibration">Calibration</string>
    <string name="action_dump_acc">Dump Acceleration data</string>
    <string name="action_dump_gyro">Dump Gyroscope data</string>
    <string name="action_dump_pressure">Dump Pressure data</string>
    <string name="action_dnload_preference">Downlaod Preference</string>
    <string name="action_upload_preference">Upload Preference</string>

    <string name="toast_bt_not_available">Bluetooth is not available</string>
    <string name="toast_bt_not_enabled">Bluetooth is not enabled</string>
    <string name="toast_bt_connected">Vario connected!</string>
    <string name="toast_bt_disconnected">Vario disconnected!</string>
    <string name="toast_bt_connection_failed">Vario connection failed!!</string>
    <string name="toast_bt_not_connected">Connect variometer first!</string>
    <string name="toast_pref_download_success">Download Preference done.</string>
    <string name="toast_pref_download_failed">Download Preference FAILED!!</string>
    <string name="toast_pref_reload_success">Reload Preference done.</string>

    <string name="title_activity_vario_preference">Vario Preference</string>
    <string name="title_activity_tone_editor">Vario ToneEditor</string>
    <string name="title_activity_calibration">Vario Calibration</string>
    <string name="title_alert_download_preference">Download Preference</string>
    <string name="title_alert_reload_preference">Reload Preference</string>

    <string name="message_download_preference">"Save current settings to device!"</string>
    <string name="message_reload_preference">"The current settings will be lost.\nAre you sure?"</string>

    <string name="pref_header_vario">Vario Preference</string>

    <string name="pref_key_glider_type">key_glider_type</string>
    <string name="pref_key_glider_manufacture">key_glider_manufacture</string>
    <string name="pref_key_glider_model">key_glider_model</string>
    <string name="pref_key_igc_enable">key_igc_enable</string>
    <string name="pref_key_igc_takeoff_speed">key_igc_takeoff_speed</string>
    <string name="pref_key_igc_landing_timeout">key_igc_landing_timeout</string>
    <string name="pref_key_igc_logging_interval">key_igc_logging_interval</string>
    <string name="pref_key_igc_pilot_name">key_igc_pilot_name</string>
    <string name="pref_key_igc_timezone">key_igc_timezone</string>
    <string name="pref_key_vario_climb_threshold">key_vario_climb_threshold</string>
    <string name="pref_key_vario_sink_threshold">key_vario_sink_threshold</string>
    <string name="pref_key_vario_sensitivity">key_vario_sensitivity</string>
    <string name="pref_key_vario_sentence">key_vario_sentence</string>
    <string name="pref_key_vario_baro_only">key_vario_baro_only</string>
    <string name="pref_key_vario_damping_factor">key_vario_damping_factor</string>
    <string name="pref_key_tone_00_velocity">key_tone_00_velocity</string>
    <string name="pref_key_tone_00_freq">key_tone_00_freq</string>
    <string name="pref_key_tone_00_period">key_tone_00_period</string>
    <string name="pref_key_tone_00_duty">key_tone_00_duty</string>
    <string name="pref_key_tone_01_velocity">key_tone_01_velocity</string>
    <string name="pref_key_tone_01_freq">key_tone_01_freq</string>
    <string name="pref_key_tone_01_period">key_tone_01_period</string>
    <string name="pref_key_tone_01_duty">key_tone_01_duty</string>
    <string name="pref_key_tone_02_velocity">key_tone_02_velocity</string>
    <string name="pref_key_tone_02_freq">key_tone_02_freq</string>
    <string name="pref_key_tone_02_period">key_tone_02_period</string>
    <string name="pref_key_tone_02_duty">key_tone_02_duty</string>
    <string name="pref_key_tone_03_velocity">key_tone_03_velocity</string>
    <string name="pref_key_tone_03_freq">key_tone_03_freq</string>
    <string name="pref_key_tone_03_period">key_tone_03_period</string>
    <string name="pref_key_tone_03_duty">key_tone_03_duty</string>
    <string name="pref_key_tone_04_velocity">key_tone_04_velocity</string>
    <string name="pref_key_tone_04_freq">key_tone_04_freq</string>
    <string name="pref_key_tone_04_period">key_tone_04_period</string>
    <string name="pref_key_tone_04_duty">key_tone_04_duty</string>
    <string name="pref_key_tone_05_velocity">key_tone_05_velocity</string>
    <string name="pref_key_tone_05_freq">key_tone_05_freq</string>
    <string name="pref_key_tone_05_period">key_tone_05_period</string>
    <string name="pref_key_tone_05_duty">key_tone_05_duty</string>
    <string name="pref_key_tone_06_velocity">key_tone_06_velocity</string>
    <string name="pref_key_tone_06_freq">key_tone_06_freq</string>
    <string name="pref_key_tone_06_period">key_tone_06_period</string>
    <string name="pref_key_tone_06_duty">key_tone_06_duty</string>
    <string name="pref_key_tone_07_velocity">key_tone_07_velocity</string>
    <string name="pref_key_tone_07_freq">key_tone_07_freq</string>
    <string name="pref_key_tone_07_period">key_tone_07_period</string>
    <string name="pref_key_tone_07_duty">key_tone_07_duty</string>
    <string name="pref_key_tone_08_velocity">key_tone_08_velocity</string>
    <string name="pref_key_tone_08_freq">key_tone_08_freq</string>
    <string name="pref_key_tone_08_period">key_tone_08_period</string>
    <string name="pref_key_tone_08_duty">key_tone_08_duty</string>
    <string name="pref_key_tone_09_velocity">key_tone_09_velocity</string>
    <string name="pref_key_tone_09_freq">key_tone_09_freq</string>
    <string name="pref_key_tone_09_period">key_tone_09_period</string>
    <string name="pref_key_tone_09_duty">key_tone_09_duty</string>
    <string name="pref_key_tone_10_velocity">key_tone_10_velocity</string>
    <string name="pref_key_tone_10_freq">key_tone_10_freq</string>
    <string name="pref_key_tone_10_period">key_tone_10_period</string>
    <string name="pref_key_tone_10_duty">key_tone_10_duty</string>
    <string name="pref_key_tone_11_velocity">key_tone_11_velocity</string>
    <string name="pref_key_tone_11_freq">key_tone_11_freq</string>
    <string name="pref_key_tone_11_period">key_tone_11_period</string>
    <string name="pref_key_tone_11_duty">key_tone_11_duty</string>
    <string name="pref_key_volume_vario">key_volume_vario</string>
    <string name="pref_key_volume_effect">key_volume_effect</string>
    <string name="pref_key_threshold_low_battery">key_threshold_low_battery</string>
    <string name="pref_key_threshold_shutdown_holdtime">key_threshold_shutdown_holdtime</string>
    <string name="pref_key_auto_shutdown_vario">key_auto_shutdown_vario</string>
    <string name="pref_key_auto_shutdown_ums">key_auto_shutdown_ums</string>
    <string name="pref_key_kalman_zmeas">key_kalman_zmeas</string>
    <string name="pref_key_kalman_zaccel">key_kalman_zaccel</string>
    <string name="pref_key_kalman_accelbias">key_kalman_accelbias</string>
    <string name="pref_key_kalman_sigma_p">key_kalman_sigma_p</string>
    <string name="pref_key_kalman_sigma_a">key_kalman_sigma_a</string>
    <string name="pref_key_caldata_accel_x">key_caldata_accel_x</string>
    <string name="pref_key_caldata_accel_y">key_caldata_accel_y</string>
    <string name="pref_key_caldata_accel_z">key_caldata_accel_z</string>
    <string name="pref_key_caldata_gyro_x">key_caldata_gyro_x</string>
    <string name="pref_key_caldata_gyro_y">key_caldata_gyro_y</string>
    <string name="pref_key_caldata_gyro_z">key_caldata_gyro_z</string>

    <string name="pref_title_glider_type">Glider Type</string>
    <string name="pref_title_glider_manufacture">Glider Manufacture</string>
    <string name="pref_title_glider_model">Glider Model</string>
    <string name="pref_title_igc_enable">Enable IGC Logging</string>
    <string name="pref_title_igc_takeoff_speed">Takeoff Speed (Km/h)</string>
    <string name="pref_title_igc_landing_timeout">Landing Timeout</string>
    <string name="pref_title_igc_logging_interval">Logging Interval</string>
    <string name="pref_title_igc_pilot_name">Pilot Name</string>
    <string name="pref_title_igc_timezone">Timezone</string>
    <string name="pref_title_vario_climb_threshold">Climb Threshold (m/s)</string>
    <string name="pref_title_vario_sink_threshold">Sink Threshold (m/s)</string>
    <string name="pref_title_vario_sensivitiy">Sensitivity (m/s)</string>
    <string name="pref_title_vario_sentence">Vario Sentence Format</string>
    <string name="pref_title_vario_baro_only">Use Barometer Only</string>
    <string name="pref_title_vario_damping_factor">Damping Factor(0.0 ~ 1.0)</string>
    <string name="pref_title_volume_vario">Vario Volume Level</string>
    <string name="pref_title_volume_effect">Effect Volume Level</string>
    <string name="pref_title_tone_editor">Tone Editor&#8230;</string>
    <string name="pref_title_threshold_low_battery">Low-battery Threshold</string>
    <string name="pref_title_threshold_shutdown_holdtime">Shutdown Holding Time</string>
    <string name="pref_title_auto_shutdown_vario">Auto Poweroff (Vario mode)</string>
    <string name="pref_title_auto_shutdown_ums">Auto Poweroff (UMS mode)</string>
    <string name="pref_title_kalman_zmeas">Z-Velocity Variance</string>
    <string name="pref_title_kalman_zaccel">Z-Acceleration Variance</string>
    <string name="pref_title_kalman_accelbias">Acceleration Bias Variance</string>
    <string name="pref_title_calibration">Calibration&#8230;</string>
    <string name="pref_title_caldata_accel_x">Accelerometer X-axis</string>
    <string name="pref_title_caldata_accel_y">Accelerometer Y-axis</string>
    <string name="pref_title_caldata_accel_z">Accelerometer Z-axis</string>
    <string name="pref_title_caldata_gyro_x">Gyrometer X-axis</string>
    <string name="pref_title_caldata_gyro_y">Gyrometer Y-axis</string>
    <string name="pref_title_caldata_gyro_z">Gyrometer Z-axis</string>

    <string name="pref_category_glider_properties">Glider Properties</string>
    <string name="pref_category_igc_logger">IGC Logger</string>
    <string name="pref_category_vario_settings">Vario Settings</string>
    <string name="pref_category_volume_threshold">Volume &amp; Threshold</string>
    <string name="pref_category_kalman_filter_parameters">Kalman Filter Parameters</string>
    <string name="pref_category_calibration">Calibration data</string>
</resources>
